# HO-Cap-Annotation

./: .editorconfig  .gitignore  .gitmodules  README.md  convert_camera_trinsics.py  convert_to_hocap_dataset.py  log.txt  log_1.txt  log_hand.txt  pyproject.toml  read_depth_image.py  requirements.txt  requirements_sam2.txt  run_all.sh  run_cluster.sh  run_detection.sh  run_hand.sh  run_local.sh  run_optimize.sh  run_separate.sh  run_tasks.sh  run_whole_process.sh  test_hand.npy  test_load_data.py  test_view_mesh.py
config/: .gitignore  config.yaml
debug/: change_mask_index.py  export_depth_from_h5.py  process_mesh.py  read_depth.py  read_mask.py  read_mesh_and_data.py  read_npy.py  read_pkl.py  test_outlier_detection.py  view_ply.py  visualize_and_evaluate_result.py  visualize_camera.py  visualize_cluster_video.py  visualize_depth.py  visualize_hand_video.py  visualize_mask.py  visualize_mesh.py  visualize_multiview_depth.py  visualize_ob_in_cam.py  visualize_ob_in_world.py  visualize_pkl_hand_video.py  visualize_tracking_pose.py  visualize_tracking_result.py  visualize_tracking_result_in_cam.py  visualize_tracking_result_w_cam.py
preprocess/: cluster_data_preprocess.py  convert_camera_trinsics.py  convert_hand_dataset.py  convert_new_camera_trinsics.py  convert_to_hocap_dataset.py  generate_meta.py  preprocess_mesh.py
scripts/: config.sh  download_models.sh  install_foundationpose.sh  install_hocap-annotation.sh  install_sam2.sh
tools/: 00_label_tookit.py  01_video_segmentation.py  02_mp_hand_detection.py  03_mp_3d_joints_generation.py  04-1_fd_pose_solver.py  (+12 more)
(+38 files in other folders)
